--- a/nicksChanges/index.html
+++ b/nicksChanges/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <h1>
     <!--added link to bring user back to home page-->
-            <a href="/">Horiseon</a>
+            <a href="/" class="seo">Horiseon</a>
         </h1>
         <!--clarified nav bar-->
         <nav>
@@ -30,11 +30,11 @@
             </ul>
         </nav>
     </header>
-    <!--prioritised as section-->
+<!--prioritised as section-->
     <section class="hero">
     <div class="content">
         <div class="search-engine-optimization">
-    <!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
+<!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
             <img src="./assets/images/search-engine-optimization.jpg" alt="" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-    <!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
+<!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
             <img src="./assets/images/online-reputation-management.jpg" alt="" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -50,7 +50,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-    <!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
+<!--added alt="" element to indicate that if the image does not load properly its context is included in the paragraph-->
             <img src="./assets/images/social-media-marketing.jpg" alt="" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -58,7 +58,9 @@
             </p>
         </div>
     </div>
-    </section>
+</section>
+<!--seperated as a new section-->
+<section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -82,12 +84,16 @@
             </p>
         </div>
     </div>
+<!--Added footer element to classify section as footer-->
+<footer>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+</footer>
+</section>
 </body>
 
 </html>
