fixed styling issue, was missing classes in the index

--- a/nicksChanges/index.html
+++ b/nicksChanges/index.html
@@ -61,7 +61,7 @@
                 <!--online reputation management section-->
                 <article class="services">
                     <div id="online-reputation-management" class="online-reputation-management">
-                        <img src="./assets/images/online-reputation-management.jpg" alt="graph showing reputation rising on laptop screen">
+                        <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="graph showing reputation rising on laptop screen">
                         <h2>Online Reputation Management</h2>
                         <p>
                             The web is full of opinions, and some these can be negative. Social media allows anyone with an internet connection
@@ -74,7 +74,7 @@
                 <!--social media marketing section-->
                 <article class="services">
                     <div id="social-media-marketing" class="social-media-marketing">
-                        <img src="./assets/images/social-media-marketing.jpg" alt="marketing team spreading business on social media">
+                        <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="marketing team spreading business on social media">
                         <h2>Social Media Marketing</h2>
                         <p>
                             Social media continues to have a sizeable influence on buying habits. Social media marketing helps you determine which
