--- a/nicksChanges/index.html
+++ b/nicksChanges/index.html
@@ -40,13 +40,13 @@
         </header>
 
         <!--Hero/Jumbotron-->
-        <div class="hero"></div>
+        <div class="hero" title="background-image"></div>
 
         <!--page content-->
         <section class="content">
                 <article class="services">
                     <!--classified id for nav link-->
-                    <div id="search-engine-optimization" class="search-engine-optimization">
+                    <div id="search-engine-optimization">
                         <!--included alt for image that may not load properly-->
                         <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="SEO written on notebook">
                         <h2>Search Engine Optimization</h2>
@@ -60,7 +60,7 @@
 
                 <!--online reputation management section-->
                 <article class="services">
-                    <div id="online-reputation-management" class="online-reputation-management">
+                    <div id="online-reputation-management">
                         <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="graph showing reputation rising on laptop screen">
                         <h2>Online Reputation Management</h2>
                         <p>
@@ -73,7 +73,7 @@
 
                 <!--social media marketing section-->
                 <article class="services">
-                    <div id="social-media-marketing" class="social-media-marketing">
+                    <div id="social-media-marketing">
                         <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="marketing team spreading business on social media">
                         <h2>Social Media Marketing</h2>
                         <p>
@@ -90,7 +90,7 @@
             <div>
                 <h3>Lead Generation</h3>
                 <!--alt left empty since image is explained-->
-                <img src="./assets/images/lead-generation.png" alt="">
+                <img src="./assets/images/lead-generation.png" alt="lead generation icon">
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -98,7 +98,7 @@
             <!--brand awareness-->
             <div>
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="">
+                <img src="./assets/images/brand-awareness.png" alt="brand awareness icon">
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -107,7 +107,7 @@
             <!--cost management-->
             <div>
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="">
+                <img src="./assets/images/cost-management.png" alt="cost management icon">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
@@ -117,7 +117,7 @@
 
         <!--footer-->
         <footer class="footer">
-            <h2>Made with ❤ by Horiseon</h2>
+            <h3>Made with ❤ by Horiseon</h3>
             <p>
                 &copy; 2019 Horiseon Social Services, Inc.
             </p>
